--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -150,7 +150,8 @@
       </div>
 
       <div class="media jumbotron tree-container">
-        <a class="pull-left" href="http://en.wikipedia.org/wiki/Aikido">
+        <a class="pull-left"
+           href="http://en.wikipedia.org/wiki/Aikido" target="_blank">
           <img class="media-object img-rounded" src="/img/morihei.jpg"
                alt="morihei" style="width: 195px; height: 240px;">
         </a>
