Footer: Word Smithy

--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -42,7 +42,7 @@
 
       .footer {
         text-align: center;
-        padding: 30px 0;
+        padding: 20px 0;
       }
 
       /* Missing from BS */
@@ -218,10 +218,10 @@
                          alt="@rksio" style="width: 64px; height: 64px;"></a>
                   <div class="media-body">
                     <h4 class="media-heading">Bisect</h4>
-                    Bisect allows you to create and share your
-                    expertise using decision trees.
+                    Bisect allows developers to create and share their
+                    expertise by constructing binary decision trees.
                     <br>
-                    Rahul Saxena is <a target="_blank" href="http://twitter.com/rksio">@rksio</a>
+                    <strong>By Rahul Saxena <a target="_blank" href="http://twitter.com/rksio">@rksio</a></strong>
                   </div>
                 </div>
               </div>
