Tweak to thin border and add gradient
add apple support

--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -122,11 +122,11 @@
     <![endif]-->
 
     <!-- Fav and touch icons
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="/img/apple-touch-icon-57-precomposed.png">
     -->
+    <link rel="apple-touch-icon" sizes="256x256" href="/img/bisect_256x256x32.png">
+    <link rel="apple-touch-icon" sizes="128x128" href="/img/bisect_128x128x32.png">
     <link rel="shortcut icon" href="/img/favicon.ico">
   </head>
 
