Add Analytics and email

--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -221,7 +221,8 @@
                     Bisect allows developers to create and share their
                     expertise by constructing binary decision trees.
                     <br>
-                    <strong>By Rahul Saxena <a target="_blank" href="http://twitter.com/rksio">@rksio</a></strong>
+                    <strong>By Rahul Saxena <a target="_blank"
+                    href="http://twitter.com/rksio">@rksio</a> <a href="mailto:rks@bisect.cc">rks@bisect.cc<a></strong>
                   </div>
                 </div>
               </div>
@@ -449,6 +450,21 @@
     <script src="/js/handlebars.js"></script>
     {# <!-- <script src="/js/holder.js"></script> --> #}
     {# <!-- <script src="/d3/d3.v3.js"></script> --> #}
+
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-39685753-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
+
     <script src="/js/bisect-main.js"></script>
 
     <script type="text/javascript">
