--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -222,7 +222,7 @@
                     expertise by constructing binary decision trees.
                     <br>
                     <strong>By Rahul Saxena <a target="_blank"
-                    href="http://twitter.com/rksio">@rksio</a> <a href="mailto:rks@bisect.cc">rks@bisect.cc<a></strong>
+                    href="http://twitter.com/rksio">@rksio</a> <a href="mailto:rks@bisect.cc">rks@bisect.cc</a></strong>
                   </div>
                 </div>
               </div>
