--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -79,6 +79,13 @@
         outline: 1px dotted;
       }
 
+      .node-regex {
+        text-decoration:underline;
+      }
+
+      .node-regex:before {
+      }
+
       /* Turn on Visibility */
       .on-edit{
         display: none;
@@ -98,9 +105,11 @@
         margin-top:4px;
         padding:4px;
         text-align:center;
+        background-color:#aaa;
       }
 
       /* Tree Coloring */
+      /*
       .tree-top {
         background-color:#ccc;
       }
@@ -112,7 +121,7 @@
       .tree-bot {
         background-color:#777;
       }
-
+      */
     </style>
     <link href="/bs/css/bootstrap-responsive.css" rel="stylesheet">
 
@@ -157,7 +166,8 @@
         </a>
         <div class="media-body">
           <h2 class="media-heading">Bisect</h2>
-          <p><small class="muted">&mdash;verb: to debug using the process of elimination.</small></p>
+          <p><small class="muted">&mdash;verb: to debug using the process of
+              elimination.</small></p>
 
           <p><strong>Bisect</strong> allows users to test program state against
           expected values. Tests results are used as bisection points
@@ -261,9 +271,11 @@
         <h3 class="node-head">{{{tree.head}}}</h3>
         <p class="node-desc">{{{tree.desc}}}</p>
         <span class="label label-info pull-right"></span>
+
         <div class="row-fluid" data-height="0">
           <div class="span12 tree-elem tree-top" data-id={{n0.id}}>
             <h4 class="node-head">{{{n0.head}}}</h4>
+            <p class="node-regex">{{{n0.regex}}}</p>
             <p class="node-desc">{{{n0.desc}}}</p>
             <span class="label label-info pull-right"></span>
           </div>
@@ -271,20 +283,8 @@
 
         <div class="row-fluid" data-height="1">
           <div class="span6 tree-elem tree-mid" data-id={{n1.id}}>
-            <!--
-            <div class="media">
-              <span class="label label-warning pull-right">Modified</span>
-              <a class="pull-left" href="#">
-                <img class="media-object" data-src="holder.js/50x75"
-                alt="64x64" style="width: 64px; height: 64px;">
-              </a>
-              <div class="media-body">
-                <h4 class="media-heading">{{{n1.head}}}</h4>
-                {{n1.desc}}
-              </div>
-            </div>
-            -->
             <h4 class="node-head">{{{n1.head}}}</h4>
+            <p class="node-regex">{{{n1.regex}}}</p>
             <p class="node-desc">{{{n1.desc}}}</p>
             <span class="label label-info pull-right"></span>
             <span class="on-edit">
@@ -301,6 +301,7 @@
           </div>
           <div class="span6 tree-elem tree-mid" data-id={{n2.id}}>
             <h4 class="node-head">{{{n2.head}}}</h4>
+            <p class="node-regex">{{{n2.regex}}}</p>
             <p class="node-desc">{{{n2.desc}}}</p>
             <span class="label label-info pull-right"></span>
             <span class="on-edit">
