--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -67,7 +67,7 @@
         padding: 20px 10px;
       }
 
-      .tree-list {
+      .seg-container {
         border-top: 2px solid #DDD;
         border-bottom: 2px solid #DDD;
         border-radius: 10px;
@@ -264,8 +264,8 @@
       </div>
 
       <div id="t-tmpl-r3-test" class="tree-container"></div>
-      {# <div id="mytlist" class="tree-list"></div> #}
-      <div id="recenttlist" class="tree-list"></div>
+      {# <div id="mytlist" class="seg-container"></div> #}
+      <div id="recenttlist" class="seg-container"></div>
 
       <div class="navbar" style="margin-bottom:0;">
         <div class="navbar-inner">
