--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -72,7 +72,7 @@
         border-bottom: 2px solid #DDD;
         border-radius: 10px;
         margin: 30px 0;
-        padding-left: 10px;
+        padding: 10px;
       }
 
       [contenteditable]:hover:not(:focus) {
@@ -270,7 +270,7 @@
 
       <div id="ci-seg" class="seg-container">
         <h3>Automate Bisections</h3>
-        <pre>$curl -d @-  http://www.bisect.cc/bisect/5764607523034234880
+        <pre>$curl -d @-  http://www.bisect.cc/bisect/42
 test-regex-0
 test-regex-1
 ^D
