Modify template to match Bisection Example

--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -271,8 +271,11 @@
       <div id="ci-seg" class="seg-container">
         <h3>Automate Bisections</h3>
         <pre>$curl -d @-  http://www.bisect.cc/bisect/42
+text does not match
 test-regex-0
+foo does not match
 test-regex-1
+bar does not match
 ^D
 {"head": "Yes: Follow-up question?", "id": 3, "desc": "Describe the situation here"}</pre>
       </div>
