Use Reading level of 7th Grader. Same as in politics.

--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -181,15 +181,54 @@
                alt="morihei" style="width: 195px; height: 240px;">
         </a>
         #}
+
         <div class="media-body">
           <h2 class="media-heading">Bisect</h2>
           <p><small class="muted">&mdash;verb: to debug using the process of
               elimination.</small></p>
 
-          <p><strong>Bisect</strong> allows users to test program state against
-          expected values. Tests results are used as bisection points
-          to narrow-down towards the root-cause of the underlying
-          issue.</p>
+          <div class="row-fluid"
+               style="border-bottom:2px dotted #DDD; padding-bottom:20px">
+
+            <div class="span4">
+              <div class="media">
+                <div class="pull-left">
+                  <span class="media-object rapico">Ç</span>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading">Debug</h4>
+                  Construct bisection trees to codify decision making and
+                  debugging
+                </div>
+              </div>
+            </div>
+
+            <div class="span4">
+              <div class="media">
+                <div class="pull-left">
+                  <span class="media-object rapico">Ñ</span>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading">Automate</h4>
+                  HTTP POST to automate bisections as part of
+                  CI <a id="ci-btn" href="#ci-seg">See example</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="span4">
+              <div class="media">
+                <div class="pull-left">
+                  <span class="media-object rapico">K</span>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading">Disseminate</h4>
+                  Communicate design intent using bisection trees
+                </div>
+              </div>
+            </div>
+
+          </div>
 
           <p><strong>Module owners</strong> employ their grasp of
           system architecture to construct a decision tree by
@@ -202,7 +241,12 @@
           continuous automation to quickly classify and narrow-down
           the source of the problem and gain better system
           understanding in the process.</p>
+
           {#
+          <p><strong>Bisect</strong> allows users to test program state against
+          expected values. Tests results are used as bisection points
+          to narrow-down towards the root-cause of the underlying
+          issue.</p>
           <p>One of the fundamental problems in programming is the
           transfer of program design across individuals. The other
           problem is the ability to correct express these concepts to
@@ -218,47 +262,6 @@
           <p>One of the hardest problems in transferring understanding
           is to guard against misconceptions.</p>
           #}
-        </div>
-
-        <div class="row-fluid" style="border-top:2px dotted #DDD; padding-top:20px">
-
-          <div class="span4">
-            <div class="media">
-              <div class="pull-left">
-                <span class="media-object rapico">Ç</span>
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">Debug</h4>
-                Construct bisection trees to codify decision making and
-                debugging
-              </div>
-            </div>
-          </div>
-
-          <div class="span4">
-            <div class="media">
-              <div class="pull-left">
-                <span class="media-object rapico">Ñ</span>
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">Automate</h4>
-                HTTP POST to automate bisections as part of
-                CI <a id="ci-btn" href="#ci-seg">See example</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="span4">
-            <div class="media">
-              <div class="pull-left">
-                <span class="media-object rapico">K</span>
-              </div>
-              <div class="media-body">
-                <h4 class="media-heading">Disseminate</h4>
-                Communicate design intent using bisection trees
-              </div>
-            </div>
-          </div>
 
         </div>
 
