bisection tree word smithy

--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -276,7 +276,7 @@
         <h3>Automate Bisections</h3>
         <pre>$curl -d @-  http://www.bisect.cc/bisect/42
 text does not match
-test-regex-0
+first-regex
 foo does not match
 test-regex-1
 bar does not match
