--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -234,8 +234,9 @@
 
           <p style="margin-top:10px;"><strong>Bisect</strong> is a
           debug and log analysis service for developers. It uses
-          HTTP to plug into automation systems and act as the
+          HTTP to plug into automation systems and acts as the
           first line of analysis for crashes and exceptions.</p>
+
           {#
           <p><strong>Bisect</strong> allows users to test program state against
           expected values. Tests results are used as bisection points
