--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -187,8 +187,16 @@
           <p><small class="muted">&mdash;verb: to debug using the process of
               elimination.</small></p>
 
+          <p class="lead" style="margin-top:10px;">Bisect is a
+          debug and log analysis service for developers</p>
+          <p class="lead">Create bisection tree amd regexes that test log output for errors</p>
+          <p class="lead">Automate log analyis by piping logs to a bisection tree using HTTP
+          POST</p>
+          <p class="lead">HTTP response is the result of running the regex tree
+          over each POST</p>
+
           <div class="row-fluid"
-               style="border-bottom:2px dotted #DDD; padding-bottom:20px">
+               style="border-top:2px dotted #DDD; padding-top:20px">
 
             <div class="span4">
               <div class="media">
@@ -232,11 +240,6 @@
 
           </div>
 
-          <p style="margin-top:10px;"><strong>Bisect</strong> is a
-          debug and log analysis service for developers. It uses
-          HTTP to plug into automation systems and acts as the
-          first line of analysis for crashes and exceptions.</p>
-
           {#
           <p><strong>Bisect</strong> allows users to test program state against
           expected values. Tests results are used as bisection points
@@ -279,11 +282,11 @@
       <div id="ci-seg" class="seg-container">
         <h3>Automate Bisections</h3>
         <pre>$curl -d @-  http://www.bisect.cc/bisect/42
-text does not match
+log text
 first-regex
-foo does not match
+log text
 test-regex-1
-bar does not match
+log text
 ^D
 {"head": "Yes: Follow-up question?", "id": 3, "desc": "Describe the situation here"}</pre>
       </div>
