--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -189,8 +189,8 @@
 
           <p class="lead" style="margin-top:10px;">Bisect is a
           debug and log analysis service for developers</p>
-          <p class="lead">Create bisection tree amd regexes that test log output for errors</p>
-          <p class="lead">Automate log analyis by piping logs to a bisection tree using HTTP
+          <p class="lead">Use bisection trees with regexes that test log output for errors</p>
+          <p class="lead">Automate log analysis by piping logs to a bisection tree using HTTP
           POST</p>
           <p class="lead">HTTP response is the result of running the regex tree
           over each POST</p>
