words, only words

--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -206,7 +206,7 @@
                 <div class="media-body">
                   <h4 class="media-heading">Debug</h4>
                   Create bisection trees to codify
-                  repetitive tests used in debug<br>
+                  repetitive checks<br>
                   <a id="dbg-btn" href="#t-tmpl-r3-test">Scroll to example</a>
                 </div>
               </div>
