--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -189,12 +189,9 @@
 
           <p class="lead" style="margin-top:10px;">Bisect is a
           debug and log analysis service for developers</p>
-          <p class="lead">Use bisection trees with regexes that test log output for errors</p>
-          <p class="lead">Automate log analysis by piping logs to a bisection tree using HTTP
-          POST</p>
-          <p class="lead">HTTP response is the result of running the regex tree
-          over each POST</p>
-
+          <p class="lead">Developers create bisection trees with regexes that check log output for errors</p>
+          <p class="lead">Log output checking is automated by
+          piping logs to the service using HTTP POST</p>
           <div class="row-fluid"
                style="border-top:2px dotted #DDD; padding-top:20px">
 
