--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -189,7 +189,7 @@
 
           <p class="lead" style="margin-top:10px;">Bisect is a
           debug and log analysis service for developers</p>
-          <p class="lead">Developers create decision trees with regexes that check log output for errors</p>
+          <p class="lead">Developers create decision trees with reg-exes that check log output for errors</p>
           <p class="lead">Log output checking is automated by
           piping logs to the service using HTTP POST</p>
           <div class="row-fluid"
