Only outline contenteditable="true" events

--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -75,7 +75,7 @@
         padding: 10px;
       }
 
-      [contenteditable]:hover:not(:focus) {
+      [contenteditable=true]:hover:not(:focus) {
         outline: 1px dotted;
       }
 
