--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -186,7 +186,7 @@
           <h2 class="media-heading">Bisect</h2>
           <p class="muted">&mdash;verb: to debug using the process of elimination.</p>
           <p class="lead" style="margin-top:10px;">Developers create decision trees (with reg-exes) that use bisection to classify issues.</p>
-          <p class="lead">An HTTP POST request is used to test log data against a decision tree.</p>
+          <p class="lead">An HTTP POST request is used to send and test log data against a tree.</p>
 
           <div class="row-fluid" style="border-top:2px dotted #DDD; padding-top:20px">
 
